--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 19990806_2 by lusky
+updated patchlevel.h to b94 for new tarball
+
+
 *** 19990806_1 by lusky
 diane fixed another unkline bug.
 
