--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 19990814_1 by lusky
+small bug in packet.c in the byte counting code (th)
+
+
 *** 19990812_1 by lusky
 revved patchlevel to b97
 ip hash function fix (th)
