--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 19990907_1 by lusky
+disallow ':' in fix_key_old() too
+
+
 *** 19990906_1 by lusky
 compromise on supressed killpath and just not send to non opers at all rather than send two to real opers (jl)
 more +k/-k fixes
