--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 19990908_2 by lusky
+revved patchlevel to b105
+cleanup m_userhost fix
+
+
 *** 19990908_1 by lusky
 changed 302 reply back to -5 form to fix userhost
 
