--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 19990928_1 by lusky
+another +o hack fix (db)
+
+
 *** 19990927_1 by lusky
 This patch corrects a case where a normal user can oper themselves (db)
 also corrects a possible core due to a bogus H or L line. (neph)
