--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 19991013_4 by lusky
+syncd config.h.dist to config.h
+
+
 *** 19991013_3 by lusky
 added display of logLevel as a string in /set log (db)
 updated opers.txt to include set log
