--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+*** 19991013_5 by lusky
+revved patchlevel.h to b110
+fixed m_ison to put trailing space on 303 responses
+CONNECTFAST is always defined for USE_POLL now, was causing very poor
+  accept performance on heavily loaded non-Solaris machines using poll()
+
+
 *** 19991013_4 by lusky
 syncd config.h.dist to config.h
 
