--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+*** 19991115_1 by lusky
+add fix for logging, if you define USE_LOGFILE, stuff will be logged to
+  the ircd.log, if you define USE_SYSLOG, stuff will be logged to syslog,
+  if you define both stuff will be logged to both. (th)
+
+
 *** 19991113_2 by lusky
 revved patchlevel to b114
 
