--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20000103_1 by lusky
+revved patchlevel to b119
+
+
 *** 20000102_1 by lusky
 The "hack" ops message is just plain wrong. Its not needed anyway. (db).
 userhost formatting problem (ce)
