--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+*** 20000525_1 by lusky
+revved patchlevel to b127
+added logging to ts_warn()
+log prefix of NICKs without TS
+
+
 *** 20000516_3 by lusky
 fixed a strncpy() (db)
 
