--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20000611_4 by lusky
+fixed README.FIRST
+
+
 *** 20000611_3 by lusky
 revved patchlevel to rc0
 updated Hybrid Team members for -6
