--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20000821_2 by lusky
+kludge to fix an I: bug where blah.foo.com could match I:nomatch::foo.com
+
+
 *** 20000821_1 by lusky
 fix for stats by a server causing a core
 
