--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20001005_2 by bill
+
+Added myself to Hybrid development team
+
+
 *** 20001005_1 by bill
 
 Fixed misnamed va var in sendto_realops()
