--- a/tools/README
+++ b/tools/README
@@ -1,3 +1,5 @@
+$Id: README,v 1.3 2000/10/06 03:01:02 lusky Exp $
+
 A directory of support programs for ircd.
 
 mkpasswd - makes password for O lines
