--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+*** 20001124_3 by lusky
+oper privs 'K' fix (wc)
+missing RPL_ENDOFTRACE's in m_ltrace (wc)
+remove LOCAL_KILL_ONLY remnant (wc)
+updated m_info.h with new config options
+
+
 *** 20001124_2 by lusky
 added a bunch of casts to fix signedness warnings with irix compiler and
   with gcc -Wall -pedantic
