--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+*** 20001126_1 by lusky
+hide baninfo for hide_ops (db)
+misc documentation cleanups (wc)
+changed SendWallops and SendServNotice macros to check IsAnOper
+
+
 *** 20001125_1 by lusky
 fix to m_links (db)
 
