--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20001221_1 by lusky
+fixed a compile warning on solaris
+
+
 *** 20001201_1 by lusky
 added Gline Exemption flag ('_') to Ilines
 
