--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+*** 20001221_2 by lusky
+added IP to I-line is full notice (pro)
+fixed rehash help (wc)
+updated opers.txt (wc)
+
+
+
 *** 20001221_1 by lusky
 fixed a compile warning on solaris
 
