--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010103_2 by lusky
+- fixed a spelling error (wc)
+
+
 *** 20010103_1 by lusky
 - revved patchlevel to 6.0 (Houston, we have a release!)
 
