--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010110_2 by lusky
+- revved patchlevel to 6.0.1
+
+
 *** 20010110_1 by lusky
 - removed old ban removel code (db)
 - removed unused locally_created flag (db)
