--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+*** 20010604_8 by greg
+Wow, I feel cool or something.
+
+Plugged myself into contributors. Maybe I should start looking at -7...
+
+
 *** 20010604_7 by leeh
 - commited cryptserv now the conflicts are gone
 
