corrected e-mail addres for cryptlinks coder in ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -130,8 +130,8 @@ Hybrid 6 tree...
 
 
 *** 20010604_1 by db
-- well. folded in ircd-hybrid-6.0.2-enclinks.tar.gz patches from
-  arnvid@karstad.org It compiles at least.
+- well. folded in ircd-hybrid-6.0.2-enclinks3.tar.gz patches from
+  einride@einride.net.  It compiles at least.
  
 
 
