--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20010607_4 by db
+- forgot to add this file for Walter
+
+
+
 *** 20010607_3 by kreator
 - fixed setup.h that had wrong EVP stuff
 - fixed tools Makefile to remove encspeed for target clean
