--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+*** 20010610_2 by kreator
+- added /usr/pkg and /usr/local paths for openssl detection since i have
+  systems with those paths used for ssl - NetBSD, etc.
+
+
 *** 20010610_1 by db
 - moved LITTLE_I_LINES into "not supported" section *sigh*
 
