--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*** 20010619_4 by wcampbel
+Added a blank line at the bottom to attempt to correct the permissions
+
+
 *** 20010619_3 by wcampbel
 Oops, reference to modules removed.
 
