--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+*** 20010624_7 by db
+- allow opers to see ip's of clients on /trace so tcm's will work again
+  do not allow them to see IP's of hidden clients
+
+
+
 *** 20010624_6 by greg
 - don't ask
 
